--- a/MineSweeper/MineSweeper/MineSweeper.csproj
+++ b/MineSweeper/MineSweeper/MineSweeper.csproj
@@ -7,4 +7,8 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Game\Game.csproj" />
+  </ItemGroup>
+
 </Project>
